[build-system]
requires = ["setuptools>=75.2"]
build-backend = "setuptools.build_meta"

[project]
name = "film-flam"
description = "Tools for extracting insights from your movie lists"
readme = "README.md"
requires-python = ">=3.12.3"
authors = [ { name="Aviv Edery", email="ederyaviv2@gmail.com" } ]
license = "GPL-3.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies", "version"]

[project.urls]
Repository = "https://github.com/Verpous/film-flam"

[project.scripts]
flam = "flam.__main__:main"

[tool.setuptools.dynamic]
dependencies = { file = ["_gen_requirements.txt"] }
version = { attr = "flam._gen_version.__version__" }

[tool.setuptools.package-data]
"flam.data" = ["*"]